--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "just-billing",
+  "homepage": "https://gitname.github.io/react-just-billing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,16 +9,20 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "number-to-words": "^1.2.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "react-sweetalert2": "^0.6.0",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
